Talks: add talks content

--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,10 @@ footnotereturnlinkcontents = "↩"
     url = "/about/"
     weight = 2
 [[menu.main]]
+    name = "Talks"
+    url = "/talks/"
+    weight = 3
+[[menu.main]]
     name = "Tags"
     url = "/tags/"
     weight = 4
